# final-project-JavierFo

./: .gitmodules  README.md  build.sh  embeddedML1.ipynb  embeddedml1.py  host_main.cpp
meta-aesd/recipes-aesd-assignments/images/: core-image-aesd.bb
meta-aesd/recipes-app/pet-classifier/: pet-classifier_1.0.bb
meta-aesd/recipes-app/pet-classifier/files/: CMakeLists.txt  main.cpp  mobilenet_v2_pet_qat.tflite
pet-host-test/: CMakeLists.txt  mqtt_cnn.cpp  mqtt_cnn.h
